--- a/_posts/story/2017-06-14-testMD.md
+++ b/_posts/story/2017-06-14-testMD.md
@@ -7,23 +7,37 @@ comments: true
 
 # Samples
 
-# Heading 1
+# Heading 1 안녕
+- 테스트
+- 테스트 2
 
-## Heading 2
+## Heading 2 안녕
+- 테스트
+- 테스트 2
 
-### Heading 3
+### Heading 3 안녕
+- 테스트
+- 테스트 2
 
-#### Heading 4
+#### Heading 4 안녕
+- 테스트
+- 테스트 2
 
-##### Heading 5
+##### Heading 5 안녕
+- 테스트
+- 테스트 2
 
-###### Heading 6
+###### Heading 6 안녕
+- 테스트
+- 테스트 2
 
 ### Body text
 
-확인중
+개발 블로그 룰루
 
 - 확인중
+- 확인중 2
+
 
 `확인중`
 
