--- a/_posts/dev/2018-04-09-숨바꼭질.md
+++ b/_posts/dev/2018-04-09-숨바꼭질.md
@@ -1,14 +1,15 @@
 ---
 layout: post
-title: Example content
+title: 숨바꼭질
 category: dev
 tags: [algorithm]
 comments: true
 ---
 
+[출처](https://www.acmicpc.net/problem/1697)
+
 ### 문제
 > 수빈이는 동생과 숨바꼭질을 하고 있다. 수빈이는 현재 점 N(0 ≤ N ≤ 100,000)에 있고, 동생은 점 K(0 ≤ K ≤ 100,000)에 있다. 수빈이는 걷거나 순간이동을 할 수 있다. 만약, 수빈이의 위치가 X일 때 걷는다면 1초 후에 X-1 또는 X+1로 이동하게 된다. 순간이동을 하는 경우에는 1초 후에 2*X의 위치로 이동하게 된다.
-
 수빈이와 동생의 위치가 주어졌을 때, 수빈이가 동생을 찾을 수 있는 가장 빠른 시간이 몇 초 후인지 구하는 프로그램을 작성하시오.
 
 ### 입력 & 출력 
@@ -18,7 +19,7 @@ comments: true
 > 4
 
 ### 코드
-```java
+{% highlight java %}
 // 숨바꼭질
 public class p1697 {
 	public static void bfs(int start, int end) {
@@ -62,4 +63,4 @@ public class p1697 {
 		bfs(n, m);
 	}
 }
-```
+{% endhighlight %}
